Code clean up and adding thread-safe